# ATM_atlas_obesity

./: BayesPrism_Deconv.R  DeconvBarplot.R  README.md
ML_surface/surface-biomarkers/: README.md  pyproject.toml
surface-biomarkers/: README.md  pyproject.toml  requirements.txt  surface_biomarkers_workflow.ipynb
surface-biomarkers/src/surface_biomarkers/: __init__.py  cli.py  data.py  io.py  panel_design.py  plots.py  signatures.py  training.py  validation.py
surface-biomarkers/src/surface_biomarkers/resources/: db_surface.csv
surface-biomarkers/tests/: test_signatures.py
