[build-system]
requires = ["setuptools>=61,<68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surface-biomarkers"
version = "0.1.0"
description = "Discovery of compact surface biomarker panels from single-cell data using ML and SHAP."
readme = "README.md"
requires-python = ">=3.7"
authors = [{ name = "Surface Biomarkers contributors" }]
dependencies = [
  "pandas==1.3.5",
  "numpy==1.18.2",
  "scikit-learn==0.22.2.post1",
  "imbalanced-learn==0.6.2",
  "lightgbm==2.3.1",
  "matplotlib==3.0.2",
  "seaborn==0.9.0",
  "shap==0.42.1"
]

[project.optional-dependencies]
umap = ["umap-learn>=0.5"]
dev = ["pytest>=7"]

[project.scripts]
surface-biomarkers = "surface_biomarkers.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
surface_biomarkers = ["resources/*.csv", "resources/*.tsv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
